# django_msal_auth

./: .gitignore  README.md  pyproject.toml
django_msal_auth/: auth.py  exceptions.py  urls.py  views.py
django_msal_auth/templatetags/: msal_tags.py
