[project]
name = "django-msal-auth"
version = "1.0.2"
description = "Django Login for Entra AD"
authors = [
    {name = "Tim Davis",email = "tim.davis@truesec.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django (>=5.0.0,<6.0.0)",
    "msal (>=1.32.3,<2.0.0)"
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
py_version = 311
line_length = 120

[tool.pylint.main]
ignore = ["third_party", "migrations", ".venv"]

[tool.pylint.format]
max-line-length = "120"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
black = "^25.1.0"

